project/test/semantics/unit/good/Good03_shouldEvaluateArithmeticOperators.ty
singleton class BinaryOperators {
    
    actions: {
        main: () -> Int = {
            val y: Int = 4 + 4; // 8
            val x: Int = 2 + y; // 10
            24 - (2 * x + y) / 7 // 20
        }
    }
}
